- get rid of hover styling on mobile - stop ms phones from trying to select text on the reader - make header more responsive in mobile and actually scale correctly on ms phones - fix main function breaking when chapter error occurred

--- a/app/features/Bible/components/content/less/content.less
+++ b/app/features/Bible/components/content/less/content.less
@@ -1,5 +1,8 @@
 .bible-reader {
 	margin-top: 15px;
+	// why does microsoft make phones?
+	-ms-user-select: none;
+
 	.note {
 		display: inherit;
 		position: relative;
